deployment/k3s/arangodb.yml
# Service
apiVersion: v1
kind: Service
metadata:
  name: data-arangodb
spec:
  ports:
    - name: arango-http
      port: 8529
      protocol: TCP
  selector:
    app: data-arangodb
---
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: data-arangodb
spec:
  containers:
    - name: data-arangodb
      image: docker.io/library/arangodb:3.10.2
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      volumeMounts:
        - mountPath: /var/lib/arangodb3-apps
          name: arangodb-apps-dir
        - mountPath: /var/lib/arangodb3
          name: arangodb-data-dir
  volumes:
    - name: arangodb-apps-dir
      hostPath:
        path: /home/steve/IdeaProjects/podman-caddy-x509/deployment/arangodb/apps
        type: Directory
    - name: arangodb-data-dir
      hostPath:
        path: /home/steve/IdeaProjects/podman-caddy-x509/deployment/arangodb/data
        type: Directory
---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: arangodb-ingress-route
  namespace: default
spec:
  entryPoints:
    - arango-http
  routes:
    - kind: Rule
      match: Host(`*`)
      services:
        - name: data-arangodb
          port: 8529
