deployment/k3s/elasticsearch.yml
# Service
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch01
spec:
  ports:
    - name: elastic-http
      port: 9200
      protocol: TCP
  selector:
    app: elasticsearch01
---
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: elasticsearch01
spec:
  containers:
    - name: es01
      image: docker.io/library/elasticsearch:8.5.3
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-data-dir
  volumes:
    - name: elasticsearch-data-dir
      hostPath:
        path: /home/steve/IdeaProjects/podman-caddy-x509/deployment/elasticsearch/data
        type: Directory
---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elastic-ingress-route
  namespace: default
spec:
  entryPoints:
    - elastic-http
  routes:
    - kind: Rule
      match: Host(`*`)
      services:
        - name: elasticsearch01
          port: 9200
