deployment/k3s/grafana.yml
# Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: grafana-http
      port: 3000
      protocol: TCP
  selector:
    app: grafana
---
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: grafana
spec:
  containers:
    - name: grafana1
      image: docker.io/grafana/grafana:9.3.2
---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: default
spec:
  entryPoints:
    - grafana-http
  routes:
    - kind: Rule
      match: Host(`*`)
      services:
        - name: grafana
          port: 3000
