deployment/k3s/kibana.yml
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  selector:
    app: kibana
  type: NodePort
---
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: kibana
spec:
  containers:
    - name: kibana1
      image: docker.io/library/kibana:8.5.3
---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress-route
  namespace: default
spec:
  entryPoints:
    - kibana-http
  routes:
    - match: Host(`localhost`)
      kind: Rule
      services:
        - name: kibana1
          port: 5601
