deployment/k3s/mongodb.yml
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: data-mongodb
  name: data-mongodb
spec:
  selector:
    app: data-mongodb
  type: NodePort
  ports:
    - name: mongodb-tcp
      port: 27017
      targetPort: 27017
---
# Pod
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
    - name: data-mongodb
      image: docker.io/library/mongo:6.0.3
      args:
        - --quiet
        - --bind_ip_all
        - --auth
        - --enableFreeMonitoring
        - "off"
        - --journal
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-data-dir
        - mountPath: /data/configdb
          name: mongodb-configdb-dir
  volumes:
    - name: mongodb-data-dir
      hostPath:
        path: /home/steve/IdeaProjects/podman-caddy-x509/deployment/mongodb/db
        type: Directory
    - name: mongodb-configdb-dir
      hostPath:
        path: /home/steve/IdeaProjects/podman-caddy-x509/deployment/mongodb/configdb
        type: Directory
---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb-ingress-route
  namespace: default
spec:
  entryPoints:
    - mongodb-tcp
  routes:
    - match: HostSNI(`localhost`)
      kind: Rule
      services:
        - name: data-mongodb
          port: 27017
